# C_Object_Tracking

./: .gitignore  C++_Object_Tracking.sln  C++_Object_Tracking.vcxproj  CMakeLists.txt  README.md  main.cpp  plotter.py  test_out.parquet
.github/workflows/: cmake.yml
include/arrow/util/: config.h
lib/: arrow.lib  opencv_aruco470.lib  opencv_barcode470.lib  opencv_bgsegm470.lib  opencv_bioinspired470.lib  opencv_calib3d470.lib  opencv_ccalib470.lib  opencv_core470.lib  opencv_datasets470.lib  opencv_dnn470.lib  opencv_dnn_objdetect470.lib  opencv_dnn_superres470.lib  opencv_dpm470.lib  opencv_face470.lib  opencv_features2d470.lib  opencv_flann470.lib  opencv_fuzzy470.lib  opencv_gapi470.lib  opencv_hfs470.lib  opencv_highgui470.lib  opencv_img_hash470.lib  opencv_imgcodecs470.lib  opencv_imgproc470.lib  opencv_intensity_transform470.lib  opencv_line_descriptor470.lib  opencv_mcc470.lib  opencv_ml470.lib  opencv_objdetect470.lib  opencv_optflow470.lib  opencv_phase_unwrapping470.lib  opencv_photo470.lib  opencv_plot470.lib  opencv_quality470.lib  opencv_rapid470.lib  opencv_reg470.lib  opencv_rgbd470.lib  opencv_saliency470.lib  opencv_shape470.lib  opencv_stereo470.lib  opencv_stitching470.lib  (+14 more)
